create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2703,7 +2703,7 @@ a {
   }
 }
 .cid-sofHhaaGEj {
-  padding-top: 6rem;
+  padding-top: 2rem;
   padding-bottom: 0rem;
   background-image: url("../../../assets/images/4855443-2000x1333.jpeg");
 }
@@ -2715,7 +2715,7 @@ a {
   transform: translateY(-10px);
 }
 .cid-sofHhaaGEj .card-wrap {
-  background: #ffffff;
+  background: #98dee8;
   border-radius: 4px;
 }
 @media (max-width: 991px) {
@@ -2766,7 +2766,7 @@ a {
 .cid-sofMRhK3UW {
   padding-top: 0rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/4855443-2000x1333.jpg");
 }
 .cid-sofMRhK3UW .mbr-section-subtitle {
   text-align: center;
