--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2715,7 +2715,7 @@ a {
   transform: translateY(-10px);
 }
 .cid-sofHhaaGEj .card-wrap {
-  background: #98dee8;
+  background: #d3f1f5;
   border-radius: 4px;
 }
 @media (max-width: 991px) {
