create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -719,7 +719,7 @@ a {
 .cid-sofFkPEt2i {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #6ec7f2;
+  background-color: #f1f1f1;
 }
 .cid-sofFkPEt2i .fb-page,
 .cid-sofFkPEt2i span,
@@ -739,7 +739,7 @@ a {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='xMinYMin meet' viewBox='0 0 262 266.895'><path id='path3087' fill='%23fff' d='M182.409,262.307v-99.803h33.499l5.016-38.895h-38.515V98.777c0-11.261,3.127-18.935,19.275-18.935 l20.596-0.009V45.045c-3.562-0.474-15.788-1.533-30.012-1.533c-29.695,0-50.025,18.126-50.025,51.413v28.684h-33.585v38.895h33.585 v99.803H182.409z'></path></svg>");
 }
 .cid-sofFkPEt2i .mbr-section-title {
-  color: #ffffff;
+  color: #353535;
 }
 .cid-sn2QJYJ4bw {
   padding-top: 5rem;
